--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -363,12 +363,12 @@ pages={1037--1060},
   note =         {{http://j.mp/iXUpBv}}
 }
 
-@Article{IacKinPor12,
+@Article{IacKinPor11b,
   author =	 {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =	 {Causal Inference Without Balance Checking: Coarsened
                   Exact Matching},
   journal =	 {Political Analysis},
-  year =	 {2012},
+  year =	 {2011},
   note =	 {{http://gking.harvard.edu/files/abs/cem-plus-abs.shtml}}
 }
 
