--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -378,7 +378,7 @@ pages={1037--1060},
   note =         {{http://j.mp/iXUpBv}}
 }
 
-@Article{IacKinPor11b,
+@Article{IacKinPor11c,
   author =	 {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =	 {Causal Inference Without Balance Checking: Coarsened
                   Exact Matching},
