--- a/gk.bib
+++ b/gk.bib
@@ -20753,7 +20753,7 @@ journal = {Science}
   year =	 2007,
   volume =	 22,
   number =	 4,
-  pages =	 {523ै539}
+  pages =	 {523--539}
 }
 
 @article{Edin03,
@@ -23658,6 +23658,37 @@ author = {{National Center for Education Statistics}},
   volume =       {75},
   number =       {2},
   pages =        {369--396},
-  year =         {2013},
-  publisher =    {Wiley Online Library}
+  year =         {2013}
 }
+@article{LunDav04,
+  title =        {Stratification and weighting via the propensity
+                  score in estimation of causal treatment effects: a
+                  comparative study},
+  author =       {Lunceford, Jared K and Davidian, Marie},
+  journal =      {Statistics in medicine},
+  volume =       {23},
+  number =       {19},
+  pages =        {2937--2960},
+  year =         {2004}
+}
+@article{ImaRat14,
+  title =        {Covariate balancing propensity score},
+  author =       {Imai, Kosuke and Ratkovic, Marc},
+  journal =      {Journal of the Royal Statistical Society: Series B
+                  (Statistical Methodology)},
+  volume =       {76},
+  number =       {1},
+  pages =        {243--263},
+  year =         {2014}
+}
+@InProceedings{Dehejia04,
+  author =       {Rajeev Dehejia},
+  editor =       {Andrew Gelman and Xiao-Li Meng},
+  booktitle =    {Applied Bayesian Modeling and Causal Inference from
+                  Incomplete-Data Perspectives},
+  title =        {Estimating Causal Effects in Nonexpermental Studies},
+  publisher =    {Wiley},
+  year =         2004,
+  address =      {New York}
+}
+
