--- a/gk.bib
+++ b/gk.bib
@@ -23691,4 +23691,21 @@ author = {{National Center for Education Statistics}},
   year =         2004,
   address =      {New York}
 }
+@Article{Rubin09,
+  author =       {Donald B. Rubin},
+  title =        {Should observational studies be designed to allow
+                  lack of balance in covariate distributions across
+                  treatment groups?},
+  journal =      {Statistics in Medince},
+  year =         2009,
+  volume =       28,
+  pages =        {1415-1424}
+}
 
+@article{Pearl00,
+  title =        {Myth, confusion, and science in causal analysis},
+  author =       {Pearl, Judea},
+  journal =      {Statistics in Medicine},
+  volume =       19,
+  year =         {2000}
+}
