--- a/gk.bib
+++ b/gk.bib
@@ -23702,10 +23702,10 @@ author = {{National Center for Education Statistics}},
   pages =        {1415-1424}
 }
 
-@article{Pearl00,
+@article{Pearl00b,
   title =        {Myth, confusion, and science in causal analysis},
   author =       {Pearl, Judea},
   journal =      {Statistics in Medicine},
   volume =       19,
-  year =         {2000}
+  year =         2000
 }
