--- a/gk.bib
+++ b/gk.bib
@@ -23709,3 +23709,21 @@ author = {{National Center for Education Statistics}},
   volume =       19,
   year =         2000
 }
+@article{PeiMorOrz08,
+  title =        {Propensity score matching},
+  author =       {Peikes, Deborah N and Moreno, Lorenzo and Orzol,
+                  Sean Michael},
+  journal =      {The American Statistician},
+  volume =       {62},
+  number =       {3},
+  year =         {2008}
+}
+@article{GlaLevMye03,
+  title =        {Nonexperimental versus Experimental Estimates of
+                  Earnings Impacts},
+  author =       {Glazerman, Steven and Levy, Dan M and Myers, David},
+  journal =      {The Annals of the American Academy of Political and
+                  Social Science},
+  pages =        {63--93},
+  year =         {2003}
+}
