--- a/gk.bib
+++ b/gk.bib
@@ -3053,13 +3053,15 @@ OPTannote = {}
 }
 
 @article{DiaSek12,
-  title =	 {Genetic matching for estimating causal effects: a
+  title =        {Genetic matching for estimating causal effects: a
                   general multivariate matching method for achieving
                   balance in observational studies},
-  author =	 {Diamond, Alexis and Sekhon, Jasjeet S},
-  journal =	 {Review of Economics and Statistics},
-  number =	 {0},
-  year =	 {2012}
+  author =       {Diamond, Alexis and Sekhon, Jasjeet S},
+  journal =      {Review of Economics and Statistics},
+  volume =       {95},
+  number =       {3},
+  pages =        {932--945},
+  year =         {2012}
 } 
 
 @misc{DiaSek05,
@@ -23717,4 +23719,15 @@ author = {{National Center for Education Statistics}},
   volume =       {62},
   number =       {3},
   year =         {2008}
+}
+@article{FinHorRoj12,
+  title =        {Civic Education and Democratic Backsliding in the
+                  Wake of Kenya’s Post-2007 Election Violence},
+  author =       {Finkel, Steven E and Horowitz, Jeremy and
+                  Rojo-Mendoza, Reynaldo T},
+  journal =      {The Journal of Politics},
+  volume =       {74},
+  number =       {01},
+  pages =        {52--65},
+  year =         {2012}
 }
