--- a/gk.bib
+++ b/gk.bib
@@ -10513,13 +10513,14 @@ pages={706-719}
 }
 
 @article{RosRub85,
-	author={Rosenbaum, Paul R. and Rubin, Donald B.},
-	title={Constructing a Control Group Using Multivariate Matched Sampling Methods
-		That Incorporate the Propensity Score},
-	journal={The American Statistician},
-	volume={39},
-	year={1985},
-	pages={33-38}
+  author =       {Rosenbaum, Paul R. and Rubin, Donald B.},
+  title =        {Constructing a Control Group Using Multivariate
+                  Matched Sampling Methods That Incorporate the
+                  Propensity Score},
+  journal =      {The American Statistician},
+  volume =       {39},
+  year =         {1985},
+  pages =        {33-38}
 }
 
 @article{RosRub85b,
@@ -23731,3 +23732,22 @@ author = {{National Center for Education Statistics}},
   pages =        {52--65},
   year =         {2012}
 }
+@Article{DAugustino98,
+  author =       {Ralph B. D'Augustino},
+  title =        {Propensity Score Methods for Bias Reduction in the
+                  Comparison of a Treatment to a Non-Randomized
+                  Control Group},
+  journal =      {Statistics in Medicine},
+  year =         1998,
+  volume =       17,
+  pages =        {2265-2281}
+}
+@Book{GuoFra15,
+  author =       {Shenyang Guo and Mark W. Fraser},
+  title =        {Propensity Score Analysis: Statistical Methods and
+                  Applications},
+  publisher =    {Sage},
+  year =         2015,
+  address =      {Thousand Oaks, CA}
+}
+
