--- a/gk.bib
+++ b/gk.bib
@@ -23750,4 +23750,25 @@ author = {{National Center for Education Statistics}},
   year =         2015,
   address =      {Thousand Oaks, CA}
 }
+@article{Efron13,
+  title =        {Estimation and accuracy after model selection},
+  author =       {Efron, Bradley},
+  journal =      {Journal of the American Statistical Association},
+  number =       { },
+  year =         {2013}
+}
+
+@Article{AthImb15,
+  author =       {Susan Athey and Guido Imbens},
+  title =        {A Measure of Robustness to Misspecification},
+  journal =      {American Economic Review Papers and Proceedings},
+  year =         {2015},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
 
