--- a/gk.bib
+++ b/gk.bib
@@ -23699,7 +23699,7 @@ author = {{National Center for Education Statistics}},
   title =        {Should observational studies be designed to allow
                   lack of balance in covariate distributions across
                   treatment groups?},
-  journal =      {Statistics in Medince},
+  journal =      {Statistics in Medicine},
   year =         2009,
   volume =       28,
   pages =        {1415-1424}
