--- a/gk.bib
+++ b/gk.bib
@@ -23750,12 +23750,12 @@ author = {{National Center for Education Statistics}},
   year =         2015,
   address =      {Thousand Oaks, CA}
 }
-@article{Efron13,
+@article{Efron15,
   title =        {Estimation and accuracy after model selection},
   author =       {Efron, Bradley},
   journal =      {Journal of the American Statistical Association},
   number =       { },
-  year =         {2013}
+  year =         {2015}
 }
 
 @Article{AthImb15,
@@ -23772,3 +23772,16 @@ author = {{National Center for Education Statistics}},
   OPTannote =    {}
 }
 
+@article{Hill08,
+  title =        {Discussion of research using propensity-score
+                  matching: Comments on ‘A critical appraisal of
+                  propensity-score matching in the medical literature
+                  between 1996 and 2003’by Peter Austin, Statistics in
+                  Medicine},
+  author =       {Hill, Jennifer},
+  journal =      {Statistics in medicine},
+  volume =       {27},
+  number =       {12},
+  pages =        {2055--2061},
+  year =         {2008}
+}
