--- a/gk.bib
+++ b/gk.bib
@@ -23785,3 +23785,35 @@ author = {{National Center for Education Statistics}},
   pages =        {2055--2061},
   year =         {2008}
 }
+@article{Ioannidis05,
+  title =        {Why most published research findings are false},
+  author =       {Ioannidis, John PA},
+  journal =      {PLoS medicine},
+  volume =       {2},
+  number =       {8},
+  pages =        {e124},
+  year =         {2005}
+}
+@article{SimNelSim11,
+  title =        {False-positive psychology undisclosed flexibility in
+                  data collection and analysis allows presenting
+                  anything as significant},
+  author =       {Simmons, Joseph P and Nelson, Leif D and Simonsohn,
+                  Uri},
+  journal =      {Psychological science},
+  volume =       {22},
+  number =       {11},
+  pages =        {1359--1366},
+  year =         {2011}
+}
+@article{Mahoney77,
+  title =        {Publication prejudices: An experimental study of
+                  confirmatory bias in the peer review system},
+  author =       {Mahoney, Michael J},
+  journal =      {Cognitive therapy and research},
+  volume =       {1},
+  number =       {2},
+  pages =        {161--175},
+  year =         {1977},
+  publisher =    {Springer}
+}
