--- a/gk.bib
+++ b/gk.bib
@@ -23817,3 +23817,18 @@ author = {{National Center for Education Statistics}},
   year =         {1977},
   publisher =    {Springer}
 }
+@Article{Kallus15,
+  author =       {Nathan Kallus},
+  title =        {Optimal A Priori Balance in The Design of Controlled
+                  Experiments},
+  journal =      { },
+  year =         {2015},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
