--- a/gk.bib
+++ b/gk.bib
@@ -23721,17 +23721,6 @@ author = {{National Center for Education Statistics}},
   number =       {3},
   year =         {2008}
 }
-@article{FinHorRoj12,
-  title =        {Civic Education and Democratic Backsliding in the
-                  Wake of Kenya’s Post-2007 Election Violence},
-  author =       {Finkel, Steven E and Horowitz, Jeremy and
-                  Rojo-Mendoza, Reynaldo T},
-  journal =      {The Journal of Politics},
-  volume =       {74},
-  number =       {01},
-  pages =        {52--65},
-  year =         {2012}
-}
 @Article{DAugustino98,
   author =       {Ralph B. D'Augustino},
   title =        {Propensity Score Methods for Bias Reduction in the
@@ -23831,4 +23820,23 @@ author = {{National Center for Education Statistics}},
   OPTnote =      {},
   OPTannote =    {}
 }
-
+@article{RobMor87,
+  title =        {The foundations of confounding in epidemiology},
+  author =       {Robins, JM and Morgenstern, H},
+  journal =      {Computers \& Mathematics with Applications},
+  volume =       {14},
+  number =       {9},
+  pages =        {869--916},
+  year =         {1987}
+}
+@article{FinHorRoj12,
+  title =        {Civic Education and Democratic Backsliding in the
+                  Wake of Kenya's Post-2007 Election Violence},
+  author =       {Finkel, Steven E and Horowitz, Jeremy and
+                  Rojo-Mendoza, Reynaldo T.},
+  year =         {2012},
+  journal =      {Journal of Politics},
+  volume =       {74},
+  number =       {01},
+  pages =        {52--65}
+}
