--- a/gk.bib
+++ b/gk.bib
@@ -23841,3 +23841,13 @@ author = {{National Center for Education Statistics}},
   number =       {01},
   pages =        {52--65}
 }
+@article{BoyEpsMar10,
+  title =        {Untangling the causal effects of sex on judging},
+  author =       {Boyd, Christina L and Epstein, Lee and Martin,
+                  Andrew D},
+  journal =      {American journal of political science},
+  volume =       {54},
+  number =       {2},
+  pages =        {389--411},
+  year =         {2010}
+}
