--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -833,10 +833,10 @@ pages={1037--1060},
   editor =	 {Gary King and Ori Rosen and Martin Tanner}
 }
 
-@inbook{KinZen04,
+@incollection{KinZen04,
   author =	 {Gary King and Langche Zeng},
-  title =	 {Encyclopedia of Biopharmaceutical Statistics},
-  chapter =	 {Inference in Case-Control Studies},
+  booktitle =	 {Encyclopedia of Biopharmaceutical Statistics},
+  title =	 {Inference in Case-Control Studies},
   year =	 {2004},
   publisher =	 {Marcel Dekker},
   edition =	 {2nd},
