added articles for econ section of ssa jep paper

--- a/gk.bib
+++ b/gk.bib
@@ -23851,3 +23851,46 @@ author = {{National Center for Education Statistics}},
   pages =        {389--411},
   year =         {2010}
 }
+@article{Feldstein74,
+  title =        {Social Security, Induced Retirement, and Aggregate Capital Accumulation},
+  author =       {Feldstein, Martin},
+  journal =      {Journal of political economy},
+  volume =       {82},
+  number =       {5},
+  pages =        {905--926},
+  year =         {1974}
+}
+@book{Harris41,
+	author={Seymour Harris},
+	title={Economics of Social Security},
+	publisher={McGraw-Hill},
+	year={1941},
+	address={New York}
+}
+@article{DiaHau84,
+  title =        {Individual Retirement and Savings Behavior},
+  author =       {Peter Diamond and Jerry Hausman},
+  journal =      {Journal of public economics},
+  volume =       {23},
+  number =       {1-2},
+  pages =        {81--114},
+  year =         {1984}
+}
+@article{Gramlich96,
+  title =        {Different Approaches for Dealing with Social Security},
+  author =       {Edward Gramlich},
+  journal =      {Journal of economic perspectives},
+  volume =       {10},
+  number =       {3},
+  pages =        {55--66},
+  year =         {1996}
+}
+@article{Samwick99,
+  title =        {Social Security Reform in the United States},
+  author =       {Andrew Samwick},
+  journal =      {National Tax Journal},
+  volume =       {52},
+  number =       {4},
+  pages =        {819--842},
+  year =         {1999}
+}
