--- a/gk.bib
+++ b/gk.bib
@@ -20640,7 +20640,7 @@ journal = {Science}
   author =	 {Peter C. Austin},
   title =	 {A critical appraisal of propensity-score matching in
                   the medical literature between 1996 and 2003},
-  journal =	 {jasa},
+  journal =	 jasa,
   year =	 2008,
   volume =	 72,
   pages =	 {2037--2049}
