--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -115,7 +115,7 @@
 
 @Article{KasKinSon15a,
   author =       {Konstantin Kashin and Gary King and Samir Soneji},
-  title =        {Nontransparency and Increasing Bias in U.S.\ Social
+  title =        {Systematic Bias and Nontransparency in U.S.\ Social
                   Security Administration Forecasts},
   journal =      {Journal of Economic Perspectives},
   year =         {2015},
@@ -124,15 +124,15 @@
   OPTnumber =    {},
   OPTpages =     {},
   OPTmonth =     {},
-  note =      {in press},
+  note =         {in press, 2015},
   OPTannote =    {}
 }
 @Article{KasKinSon15b,
   author =       {Konstantin Kashin and Gary King and Samir Soneji},
-  title =        {Explaining Nontransparency and Increasing Bias in
+  title =        {Explaining Systematic Bias and Nontransparency in
                   U.S.\ Social Security Administration Forecasts},
-  journal =      { },
-  year =         {2015},
+  journal =      {Political Analysis},
+  year =         {In press, 2015},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
@@ -143,20 +143,20 @@
 }
 @Article{KasKinSon15c,
   author =       {Konstantin Kashin and Gary King and Samir Soneji},
-  title =        {Replication Data for: Nontransparency and Increasing
-                  Bias in U.S.\ Social Security Administration
-                  Forecasts},
+  title =        {Replication Data for: Systematic Bias and
+                  Nontransparency in U.S.\ Social Security
+                  Administration Forecasts},
   journal =      { },
   year =         2015,
-  note =         {UNF:5:6BIXdKbAVG6c+oLOc6a+1A==
+  note =         {UNF:5:1oerGFXQ0Bu9bcMFU5/t2A==
                   \underline{http://dx.doi.org/10.7910/DVN/28122}
                   Harvard Dataverse [Distributor] V1 [Version]}
 }
 
 @Article{KasKinSon15d,
   author =       {Konstantin Kashin and Gary King and Samir Soneji},
-  title =        {Replication Data for: Explaining Nontransparency and
-                  Increasing Bias in U.S.\ Social Security
+  title =        {Replication Data for: Explaining Systematic Bias and
+                  Nontransparency in U.S.\ Social Security
                   Administration Forecasts},
   journal =      { },
   year =         2015,
@@ -165,11 +165,11 @@
                   Harvard Dataverse [Distributor] V1 [Version] }
 }
 
-@Article{BlaHonKin14a,
+@Article{BlaHonKin15a,
   author =       {Matthew Blackwell and James Honaker and Gary King},
   title =        {A Unified Approach to Measurement Error and Missing
                   Data: Overview},
-  journal =      { },
+  journal =      {Sociological Methods and Research},
   year =         {2014},
   OPTkey =       {},
   OPTvolume =    {},
@@ -179,12 +179,12 @@
   OPTnote =      {},
   OPTannote =    {}
 }
-@Article{BlaHonKin14b,
+@Article{BlaHonKin15b,
   author =       {Matthew Blackwell and James Honaker and Gary King},
   title =        {A Unified Approach to Measurement Error and Missing
                   Data: Details and Extensions},
-  journal =      { },
-  year =         {2014},
+  journal =      {Sociological Methods and Research},
+  year =         {2015},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
@@ -195,13 +195,13 @@
 }
 
 @Article{KinSen12,
-  author = 	 {Gary King and Maya Sen},
-  title = 	 {How Social Science Research can Improve Teaching},
-  journal = 	 {PS: Political Science and Politics},
-number=3,
-pages={612--629},
-  year = 	 2012,
-  note =	 {{http://j.mp/NFVja6}}
+  author =       {Gary King and Maya Sen},
+  title =        {How Social Science Research can Improve Teaching},
+  journal =      {PS: Political Science and Politics},
+  number =       3,
+  pages =        {612--629},
+  year =         2012,
+  note =         {{http://j.mp/NFVja6}}
 }
 
 @Article{KinSen12b,
