Added Trustees Reports, OCACT

--- a/gk.bib
+++ b/gk.bib
@@ -17427,11 +17427,28 @@ pages =	 {186-200}
   year =	 2003,
 }
 
+@TechReport{SSAB11,
+  author =	 {{Social Security Advisory Board Technical Panel}},
+  title =	 {2011 Technical Panel on Assumptions and Methods},
+  institution =	 {Social Security Advisory Board},
+  year =	 2011,
+  note =	 {http://j.mp/SSATech11}
+}
+
 @TechReport{SSAB07,
   author =	 {{Social Security Advisory Board Technical Panel}},
   title =	 {2007 Technical Panel on Assumptions and Methods},
   institution =	 {Social Security Advisory Board},
   year =	 2007,
+  note =	 {http://j.mp/SSATech07}
+}
+
+@TechReport{SSAB03,
+  author =	 {{Social Security Advisory Board Technical Panel}},
+  title =	 {2003 Technical Panel on Assumptions and Methods},
+  institution =	 {Social Security Advisory Board},
+  year =	 2003,
+  note =	 {http://j.mp/SSATech03}
 }
 
 @TechReport{SSAB99,
@@ -17439,6 +17456,7 @@ pages =	 {186-200}
   title =	 {1999 Technical Panel on Assumptions and Methods},
   institution =	 {Social Security Advisory Board},
   year =	 1999,
+  note =	 {http://j.mp/SSATech99}
 }
 
 @TechReport{SSAB94,
@@ -23393,7 +23411,7 @@ author = {{National Center for Education Statistics}},
 }
 @Unpublished{Blahous07,
   author = 	 {Charles P. {Blahous, III}},
-  title = 	 {Have the Social Security Trustees Been Too Consservative?},
+  title = 	 {Have the Social Security Trustees Been Too Conservative?},
   note = 	 {A Presentation at the American Enterprise Institute},
   month = 	 {7 September},
   year = 	 {2007}
@@ -23916,3 +23934,41 @@ author = {{National Center for Education Statistics}},
 	year={2011},
 	address={Schaumburg, IL}
 }
+@misc{HMD15,
+title = {{Human Mortality Database}},
+year = {2015},
+note= {University of California, Berkeley (USA) and Max Planck Institute for Demographic Research (Germany). Available at \url{http://www.mortality.org} or \url{http://www.humanmortality.de} (data downloaded on January 31, 2015)}
+}
+
+@TechReport{SSBT,
+  author =	 {The Board of Trustees, Federal OASDI Trust Funds},
+  title =	 {{Annual Report of the Board of Trustees of the Federal Old-Age and Survivors Insurance and Federal Disability Insurance Trust Funds}},
+  institution =	 {Social Security Advisory Board},
+  year =	 {1982--2010},
+}
+
+@TechReport{OCACT12,
+  author =	 {{Office of the Chief Actuary}},
+  title =	 {The Long-Range Demographic Assumptions for the 2012 Trustees Report},
+  institution =	 {Social Security Administration},
+  year =	 {2012},
+  note = {\url{http://j.mp/OCACT12}}
+}
+
+@TechReport{OCACT13,
+  author =	 {{Office of the Chief Actuary}},
+  title =	 {The Long-Range Demographic Assumptions for the 2013 Trustees Report},
+  institution =	 {Social Security Administration},
+  year =	 {2013},
+  note = {\url{http://j.mp/OCACT13}}
+}
+
+@TechReport{OCACT14,
+  author =	 {{Office of the Chief Actuary}},
+  title =	 {The Long-Range Demographic Assumptions for the 2014 Trustees Report},
+  institution =	 {Social Security Administration},
+  year =	 {2014},
+  note = {\url{http://j.mp/OCACT14}}
+}
+
+
