--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -124,7 +124,7 @@
   OPTnumber =    {},
   OPTpages =     {},
   OPTmonth =     {},
-  note =         {in press, 2015},
+  note =         {In press},
   OPTannote =    {}
 }
 @Article{KasKinSon15b,
