Added citation to JEP online appendix

--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -165,6 +165,21 @@
                   Harvard Dataverse [Distributor] V1 [Version] }
 }
 
+@Article{KasKinSon15e,
+  author =       {Konstantin Kashin and Gary King and Samir Soneji},
+  title =        {Systematic Bias and Nontransparency in U.S.\ Social
+                  Security Administration Forecasts: Online Appendix},
+  journal =      {Journal of Economic Perspectives},
+  year =         {2015},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  note =         {In press},
+  OPTannote =    {}
+}
+  
 @Article{BlaHonKin15a,
   author =       {Matthew Blackwell and James Honaker and Gary King},
   title =        {A Unified Approach to Measurement Error and Missing
