--- a/gk.bib
+++ b/gk.bib
@@ -23971,4 +23971,25 @@ note= {University of California, Berkeley (USA) and Max Planck Institute for Dem
   note = {\url{http://j.mp/OCACT14}}
 }
 
-
+@article{VanDan14,
+  title =        {On regression adjustment for the propensity score},
+  author =       {Vansteelandt, Stijn and Daniel, RM},
+  journal =      {Statistics in Medicine},
+  volume =       {33},
+  number =       {23},
+  pages =        {4053--4072},
+  year =         {2014},
+  publisher =    {Wiley Online Library}
+}
+@article{RobHerBru00,
+  title =        {Marginal structural models and causal inference in
+                  epidemiology},
+  author =       {Robins, James M and Hernan, Miguel Angel and
+                  Brumback, Babette},
+  journal =      {Epidemiology},
+  volume =       {11},
+  number =       {5},
+  pages =        {550--560},
+  year =         {2000},
+  publisher =    {LWW}
+}
