added MO dataverse cites

--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -185,7 +185,7 @@
   title =        {A Unified Approach to Measurement Error and Missing
                   Data: Overview},
   journal =      {Sociological Methods and Research},
-  year =         {2014},
+  year =         {2015},
   OPTkey =       {},
   OPTvolume =    {},
   OPTnumber =    {},
@@ -1952,6 +1952,29 @@ pages={1037--1060},
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@Article{BlaHonKin15c,
+  author =       {Matthew Blackwell and James Honaker and Gary King},
+  title =        {Replication Data for: A Unified Approach To
+                  Measurement Error And Missing Data: Overview},
+  journal =      { },
+  year =         2015,
+  note =         {UNF:5:n/rveBXUX+nOxE6Z5xsWNg==
+                  \underline{http://dx.doi.org/10.7910/DVN/29606} IQSS
+                  Dataverse Network [Distributor]}
+}
+
+@Article{BlaHonKin15d,
+  author =       {Matthew Blackwell and James Honaker and Gary King},
+  title =        {Replication data for: A Unified Approach To
+                  Measurement Error And Missing Data: Details And
+                  Extensions},
+  journal =      { },
+  year =         2015,
+  note =         {\underline{http://dx.doi.org/10.7910/DVN/29610} IQSS
+                  Dataverse Network [Distributor]}
+}
+
 
 @Article{KinRob14,
   author =       {Gary King and Margaret Roberts},
