--- a/gk.bib
+++ b/gk.bib
@@ -139,13 +139,17 @@ title =	 {Matching on the estimated Propensity Score},
 year =	 2011,
 howpublished = {NBER}
 }
-@misc{AbaImb11c,
-  author =       {Alberto Abadie and Guido Imbens},
-  title =        {A Martingale Representation for Matching Estimators},
-  year =         2011,
-  howpublished = {NBER}
-}
 
+@article{AbaImb12,
+  title =        {A Martingale Representation for Matching Estimators},
+  author =       {Abadie, Alberto and Imbens, Guido W},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {107},
+  number =       {498},
+  pages =        {833--843},
+  year =         {2012},
+  publisher =    {Taylor \& Francis}
+}
 
 
 @article{Imb00,
@@ -21272,18 +21276,18 @@ journal = {Science}
 }
 
 @Article{AbaImbZhe11,
-  author =	 {Alberto Abadie, Guido W. Imbens, Fanyin Zheng},
-  title =	 {Robust Inference for MisspeciˆÄÅ¬é‡§è¬Åed Models Conditional
+  author =       {Alberto Abadie, Guido W. Imbens, Fanyin Zheng},
+  title =        {Robust Inference for Misspecied Models Conditional
                   on Covariates},
-  journal =	 { },
-  year =	 {2011},
-  OPTkey =	 {},
-  OPTvolume =	 {},
-  OPTnumber =	 {},
-  OPTpages =	 {},
-  OPTmonth =	 {},
-  OPTnote =	 {Working paper},
-  OPTannote =	 {}
+  journal =      { },
+  year =         {2011},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {Working paper},
+  OPTannote =    {}
 }
 
 
